@@ -89,17 +89,17 @@ EOT
   def test_allow_nan
     assert_raises(GeneratorError) { generate([JSON::NaN]) }
     assert_equal '[NaN]', generate([JSON::NaN], :allow_nan => true)
-    assert_equal '[NaN]', fast_generate([JSON::NaN])
+    assert_raises(GeneratorError) { fast_generate([JSON::NaN]) }
     assert_raises(GeneratorError) { pretty_generate([JSON::NaN]) }
     assert_equal "[\n  NaN\n]", pretty_generate([JSON::NaN], :allow_nan => true)
     assert_raises(GeneratorError) { generate([JSON::Infinity]) }
     assert_equal '[Infinity]', generate([JSON::Infinity], :allow_nan => true)
-    assert_equal '[Infinity]', fast_generate([JSON::Infinity])
+    assert_raises(GeneratorError) { fast_generate([JSON::Infinity]) }
     assert_raises(GeneratorError) { pretty_generate([JSON::Infinity]) }
     assert_equal "[\n  Infinity\n]", pretty_generate([JSON::Infinity], :allow_nan => true)
     assert_raises(GeneratorError) { generate([JSON::MinusInfinity]) }
     assert_equal '[-Infinity]', generate([JSON::MinusInfinity], :allow_nan => true)
-    assert_equal '[-Infinity]', fast_generate([JSON::MinusInfinity])
+    assert_raises(GeneratorError) { fast_generate([JSON::MinusInfinity]) }
     assert_raises(GeneratorError) { pretty_generate([JSON::MinusInfinity]) }
     assert_equal "[\n  -Infinity\n]", pretty_generate([JSON::MinusInfinity], :allow_nan => true)
   end
